...
                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="root" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TOW-WB-WKw">
                                <rect key="frame" x="80" y="25" width="90" height="70"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" image="tree" catalog="system" title="root"/>
                                <connections>
                                    <action selector="root:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PGS-Sd-aUm"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b9I-Fe-MdU">
                                <rect key="frame" x="540" y="25" width="90" height="70"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" image="magnifyingglass" catalog="system" title="search">
                                    <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="search:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fai-JC-kwh"/>
                                </connections>
                            </button>
...
